Implement basic communication with NAU7802

--- a/escale_fw/platformio.ini
+++ b/escale_fw/platformio.ini
@@ -14,5 +14,6 @@ board = seeed_xiao
 framework = arduino
 lib_deps = 
 	olikraus/U8g2@^2.28.8
+	sparkfun/SparkFun Qwiic Scale NAU7802 Arduino Library@^1.0.4
 build_flags = 
 	-Wall
