--- a/escale_fw/platformio.ini
+++ b/escale_fw/platformio.ini
@@ -13,7 +13,14 @@ platform = atmelsam
 board = seeed_xiao
 framework = arduino
 lib_deps = 
+	werediver/fmt@^7.1.3
 	olikraus/U8g2@^2.28.8
 	sparkfun/SparkFun Qwiic Scale NAU7802 Arduino Library@^1.0.4
-build_flags = 
+build_unflags =
+	-std=c++11
+	-std=gnu++11
+	-fno-exceptions
+build_flags =
+	-std=c++17
 	-Wall
+	-fexceptions
