--- a/escale_fw/platformio.ini
+++ b/escale_fw/platformio.ini
@@ -12,8 +12,8 @@
 platform = atmelsam
 board = seeed_xiao
 framework = arduino
-lib_deps = 
-	werediver/fmt@^7.1.3
+lib_deps =
+	fmt@^8.0.0
 	olikraus/U8g2@^2.28.8
 	sparkfun/SparkFun Qwiic Scale NAU7802 Arduino Library@^1.0.4
 build_unflags =
