--- a/escale_fw/platformio.ini
+++ b/escale_fw/platformio.ini
@@ -13,13 +13,14 @@ platform = atmelsam
 board = seeed_xiao
 framework = arduino
 lib_deps =
-	fmt@^8.0.0
+	fmt@^8.0.1
 	olikraus/U8g2@^2.28.8
 	sparkfun/SparkFun Qwiic Scale NAU7802 Arduino Library@^1.0.4
 build_unflags =
 	-std=c++11
 	-std=gnu++11
 	-fno-exceptions
+	-fno-rtti
 build_flags =
 	-std=c++17
 	-Wall
