Set up `clang-tidy` as the static analysis tool

--- a/escale_fw/platformio.ini
+++ b/escale_fw/platformio.ini
@@ -12,6 +12,9 @@
 platform = atmelsam
 board = seeed_xiao
 framework = arduino
+check_tool = clangtidy
+check_flags =
+  clangtidy: -extra-arg=-std=c++17 --checks=-google-*,-fuchsia-*,-llvm-header-guard,-modernize-use-trailing-return-type
 lib_deps =
 	fmt@^8.0.1
 	olikraus/U8g2@^2.28.8
