--- a/escale_fw/platformio.ini
+++ b/escale_fw/platformio.ini
@@ -8,9 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:seeed_xiao]
+[env:xiao]
 platform = atmelsam
 board = seeed_xiao
+monitor_filters = default, time
 framework = arduino
 check_tool = clangtidy
 check_flags =
