--- a/escale_fw_rs/.vscode/settings.json
+++ b/escale_fw_rs/.vscode/settings.json
@@ -3,9 +3,11 @@
     "rust-analyzer.checkOnSave.allTargets": false,
     "editor.formatOnSave": true,
     "cSpell.words": [
+        "cntx",
         "defmt",
         "pico",
         "plls",
+        "Uninit",
         "XOSC",
         "xtal"
     ],
