--- a/escale_fw_rs/Cargo.toml
+++ b/escale_fw_rs/Cargo.toml
@@ -1,30 +1,28 @@
 [package]
-authors = ["the rp-rs team"]
-edition = "2018"
-readme = "README.md"
-name = "rp2040-project-template"
+name = "escale"
 version = "0.1.0"
-resolver = "2"
+authors = ["Raman Fedaseyeu <raman.fedaseyeu@gmail.com>"]
+readme = "README.md"
+edition = "2021"
 
 [dependencies]
 cortex-m = "0.7.3"
 cortex-m-rt = "0.7.0"
 embedded-hal = { version = "0.2.5", features = ["unproven"] }
 embedded-time = "0.12.0"
+alloc-cortex-m = "0.4.2"
 
-defmt = "0.3.0"
-defmt-rtt = "0.3.0"
-panic-probe = { version = "0.3.0", features = ["print-defmt"] }
+panic-probe = "0.3.0"
 
-# We're using a Pico by default on this template
-rp-pico = "0.3.0"
-
-# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
+# Board Support Package
+rp-pico = "0.4.1"
 # sparkfun-pro-micro-rp2040 = "0.2.0"
 
-# If you're not going to use a Board Support Package you'll need these:
+# When not using a BSP, use these
 # rp2040-hal = { version="0.4.0", features=["rt"] }
 # rp2040-boot2 = "0.2.0"
+
+ssd1306 = "0.7.0"
 
 # cargo build/run
 [profile.dev]
