Restructure the project to allow running unit-tests on the host system

--- a/escale_fw_rs/.vscode/tasks.json
+++ b/escale_fw_rs/.vscode/tasks.json
@@ -8,6 +8,9 @@
       "args": [
         "build"
       ],
+      "options": {
+        "cwd": "app"
+      },
       "problemMatcher": [
         "$rustc"
       ],
