--- a/escale_fw_rs/.vscode/settings.json
+++ b/escale_fw_rs/.vscode/settings.json
@@ -5,6 +5,8 @@
     "cSpell.words": [
         "cntx",
         "defmt",
+        "fabsf",
+        "libm",
         "pico",
         "plls",
         "Uninit",
