--- a/escale_fw_rs/lib/app-core/Cargo.toml
+++ b/escale_fw_rs/lib/app-core/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 stuff = { path = "../stuff" }
-num-traits = { version = "0.2.15", default-features = false }
+num-traits = { version = "0.2.15", default-features = false, features = ["libm"] }
 fugit = "0.3.6"
+libm = "0.2.3"
