Persist the calibration parameter

--- a/escale_fw_rs/.vscode/settings.json
+++ b/escale_fw_rs/.vscode/settings.json
@@ -9,6 +9,8 @@
         "libm",
         "pico",
         "plls",
+        "repr",
+        "rodata",
         "Uninit",
         "XOSC",
         "xtal"
